# fastapi_social_network

./: .gitignore  README.md  pyproject.toml
blogservice/: .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  main.py  pyproject.toml  tree.py
blogservice/app/api/controllers/: __init__.py  article_controller.py  comment_controller.py  user_controller.py
blogservice/app/core/: config.py  exceptions.py  logging_config.py  security.py  telegram_logger.py
blogservice/app/core/config/: app_config.py
blogservice/app/core/config/database/: db_config.py  db_helper.py
blogservice/app/db/: database.py
blogservice/app/db/models/: article_model.py  base_model.py
blogservice/app/db/repositories/: article_repository.py  base_repository.py  comment_repository.py  sqlalchemy_repository.py  user_repository.py
blogservice/app/migration/: env.py
blogservice/app/migration/versions/: a08715f7e5d1_3revision.py  d63b85c3ad5e_index_revision.py  f0253be5bf60_initial_revision.py
blogservice/app/models/: article_model.py  base_model.py  comment_model.py  complaint_model.py  review_model.py  user_model.py
blogservice/app/models/schemas/: article_schema.py  base_schema.py  comment_schema.py  user_schema.py
blogservice/app/services/: article_service.py  base_service.py  comment_service.py  user_service.py
