[tool.poetry]
name = "blogservice"
version = "0.1.0"
description = ""
authors = ["Egor Fironov <131647674+Egor1511@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.32"
fastapi = {extras = ["all"], version = "^0.112.2"}
asyncpg = "^0.29.0"
requests = "^2.32.3"
pydantic-settings = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
